finnaly httpclient error fixed bc i had two diffrent megrations for it between back and front, now fixing front login auth: error: forbiden 403

--- a/frontend-01blog/angular.json
+++ b/frontend-01blog/angular.json
@@ -63,7 +63,8 @@
               "buildTarget": "frontend-01blog:build:production"
             },
             "development": {
-              "buildTarget": "frontend-01blog:build:development"
+              "buildTarget": "frontend-01blog:build:development",
+              "proxyConfig": "proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
