--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- ✅ Spring Boot Parent -->
+    <!--  Spring Boot Parent -->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -24,7 +24,7 @@
     </properties>
 
     <dependencies>
-        <!-- ✅ Spring Boot Core -->
+        <!--  Spring Boot Core -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -45,7 +45,7 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
-        <!-- ✅ PostgreSQL -->
+        <!--  PostgreSQL -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
@@ -53,7 +53,7 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- ✅ JWT -->
+        <!--  JWT -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
@@ -72,14 +72,14 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- ✅ Lombok -->
+        <!--  Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
 
-        <!-- ✅ Testing -->
+        <!--  Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -92,7 +92,7 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- ✅ Cloudinary -->
+        <!--  Cloudinary -->
         <dependency>
             <groupId>com.cloudinary</groupId>
             <artifactId>cloudinary-http44</artifactId>
@@ -102,7 +102,7 @@
 
     <build>
         <plugins>
-            <!-- ✅ Compiler Plugin (Java 17 + Lombok) -->
+            <!--  Compiler Plugin (Java 17 + Lombok) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -120,7 +120,7 @@
                 </configuration>
             </plugin>
 
-            <!-- ✅ Spring Boot Plugin (lets you run `mvn spring-boot:run`) -->
+            <!--  Spring Boot Plugin (lets you run `mvn spring-boot:run`) -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
